[package]
name = "sentiric-rtp-core"
version = "1.3.0"
edition = "2021"
description = "High-precision RTP/RTCP engine with hybrid pacing and intelligent NAT latching."
authors = ["Sentiric Team"]
license = "AGPL-3.0"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"

[build-dependencies]
cc = "1.0"
glob = "0.3"