[package]
name = "sentiric-rtp-core"
version = "1.5.1"
edition = "2021"
description = "High-precision RTP/RTCP engine with custom Cubic DSP."
authors = ["Sentiric Team"]
license = "AGPL-3.0"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"

[build-dependencies]
cc = "1.0"
glob = "0.3"

[dev-dependencies]
hound = "3.5"
rand = "0.8"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "codec_lab"
harness = false